<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/default_margin_16">

    <Button
        android:id="@+id/btnDialogCancel"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/default_margin_16"
        android:layout_marginEnd="@dimen/default_margin_16"
        android:text="@string/btn_cancel"
        app:layout_constraintEnd_toStartOf="@+id/btnDialogOk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLongitude" />

    <Button
        android:id="@+id/btnDialogOk"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/default_margin_16"
        android:layout_marginTop="@dimen/default_margin_16"
        android:text="@string/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDialogCancel"
        app:layout_constraintTop_toBottomOf="@+id/tvLongitude" />

    <TextView
        android:id="@+id/tvLatitudeLabel"
        style="@style/Text.16.Hint"
        android:text="@string/label_latitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLatitude"
        style="@style/Text.16"
        android:layout_marginTop="@dimen/default_margin_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLatitudeLabel"
        tools:text="53.5462313354" />

    <TextView
        android:id="@+id/tvLongitudeLabel"
        style="@style/Text.16.Hint"
        android:layout_marginTop="@dimen/default_margin_16"
        android:text="@string/label_longitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLatitude" />

    <TextView
        android:id="@+id/tvLongitude"
        style="@style/Text.16"
        android:layout_marginTop="@dimen/default_margin_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLongitudeLabel"
        tools:text="53.5462313354" />


</androidx.constraintlayout.widget.ConstraintLayout>